--- a/scala/02.类与对象.md
+++ b/scala/02.类与对象.md
@@ -1,7 +1,8 @@
-1.使用 require 方法解决参数检查
+## 02 类与对象
 
-示例：
-```
+### 1 使用 require 方法解决参数检查
+
+```scala
 class Rational(n: Int, d: Int) {
 //  println(s"created ${n}/${d}")
   require(d != 0)
@@ -16,11 +17,16 @@ def main(args: Array[String]): Unit = {
 }
 
 ```
-抛出异常 java.lang.IllegalArgumentException
+抛出异常
 
-
-2.构造参数扩展成成员变量
+```java
+java.lang.IllegalArgumentException
 ```
+
+
+### 2 构造参数扩展成成员变量
+
+```scala
 class Rational(n: Int, d: Int) {
   //  println(s"created ${n}/${d}")
   require(d != 0)
@@ -51,8 +57,9 @@ object RTest {
 }
 ```
 
-3.this 的使用
-```
+### 3 this 的使用
+
+```scala
 // 访问属性时，this 可省略
 def lessThan(that: Rational): Boolean = {
   this.number * that.denom < denom * that.number
@@ -64,11 +71,12 @@ def max(that: Rational): Rational = {
 }
 ```
 
-4.辅助构造函数
+### 4 辅助构造函数
+
 除主构造函数之外的构造函数都是辅助构造函数，所有辅助构造函数的名称都为this，其第一个语句都为调用其它构造函数（可以是主构造函数或其它辅助构造函数，最终会调用主构造函数）
 由于上述条件限制，使得每个构造函数最终都会调用主构造函数，从而使得主构造函数成为创建类单一入口点，此外在 scala 中只有主构造函数可以调用基类的构造函数，这些限制可以保证一致性。
 
-```
+```scala
 class Rational(n: Int, d: Int) {
 
   // 辅助构造函数, 定义整数有理数
@@ -79,8 +87,9 @@ class Rational(n: Int, d: Int) {
 ```
 
 
-5.私有变量及私有方法
-```
+### 5 私有变量及私有方法
+
+```scala
 class Rational(n: Int, d: Int) {
   require(d != 0)
 
@@ -111,11 +120,12 @@ class Rational(n: Int, d: Int) {
 }
 ```
 
-6.标志符
-如果使用关键字作为标志符，需要加重音符号，比如 Thread.`yield`()
+### 6 标志符
 
-对于 +、++、:::、<、 ?>、 :-> 之类的符号，Scala 内部实现时会使用转义的标志符。
-例如对 :-> 使用 $colon$minus$greater 来表示这个符号。因此，如果你需要在 Java 代码中访问 :-> 方法，你需要使用 Scala 的内部名称 $colon$minus$greater 。
+如果使用关键字作为标志符，需要加重音符号，比如 ```Thread.`yield`()```
+
+对于 `+、++、:::、<、 ?>、 :->` 之类的符号，scala 内部实现时会使用转义的标志符。
+如 `:->` 使用 `$colon$minus$greater` 来表示这个符号。在 Java 代码中访问 `:->` 方法，需要使用 scala 的内部名称 `$colon$minus$greater` 。
 
 如果你需要定义一元运算符，你可以使用 +、-、! 和 ~ 四个符号作为前缀操作符。
 ```
@@ -129,8 +139,9 @@ class Rational(n:Int, d:Int)
 }
 ```
 
+### 7 隐式转换
 
-7.隐式转换
+```
 val x = new Rational(66, 42)
 val y = new Rational(2, 3)
 
@@ -139,7 +150,8 @@ implicit def intToRational(x:Int): Rational = new Rational(x)
 
 println(5 + x)
 println(x + 4)
+```
 
+### 8 枚举
 
-8.枚举
-可以选择继承 Enumeration，或者使用 case 类
+可以选择继承 `Enumeration，也可以使用` `case class`
