--- a/scala/03.基本数据类型简介.md
+++ b/scala/03.基本数据类型简介.md
@@ -1,13 +1,12 @@
-scala没有java基本数据类型，它的实现是对象，这些数据类型可以通过隐式转换成其它类型，以便扩展。
+## 03 基本数据类型简介
 
-其中 scala 提供的有，整型：Byte、Short、Int、Long 和 Char 浮点型：Float 和 Double。
-java 提供的 String 类型。
+scala 中没有 java 中的基本数据类型，它的实现是对象，这些数据类型可以通过隐式转换成其它类型，以便扩展。
+包括整型：Byte、Short、Int、Long；浮点型：Float 和 Double；java 提供的 String 类型。
+
 scala 程序在运行时会自动载入 scala 和 java.lang 包。
 
-字面量
-两个 """ 可以定义长字符串
-
 Scala 的 == 和Java不同，== 或 equal 是可以被重载的。
+
 对于引用类型(AnyRef)的比较需要使用 eq 和 ne，并且该操作符不能被重载。
 ```
 val a:Integer = 128
