--- a/scala/04.控制语句.md
+++ b/scala/04.控制语句.md
@@ -1,20 +1,19 @@
-1.if 表达式
+## 04 控制语句
 
+### 3 for 表达式
 
-2.while 循环（返回值为 Unit）
+#### 3.1 生成器 file <-filesHere
 
-
-3.for 表达式
-3.1 生成器 file <-filesHere 
-```
+```scala
 val filesHere = (new java.io.File(".")).listFiles
 
 for(file <-filesHere)
   println(file)
 ```
 
-3.2 过滤器 for(file <-filesHere if ...)
-```
+#### 3.2 过滤器 for(file <-filesHere if ...)
+
+```scala
 val filesHere = (new java.io.File(".")).listFiles
 for (
   file <- filesHere
@@ -24,10 +23,11 @@ for (
 ```
 
 
-3.3 生成器嵌套
+#### 3.3 生成器嵌套
 
 两个生成器之间使用 ; 分隔
-```
+
+```scala
 val filesHere = (new java.io.File(".")).listFiles
 
 def fileLines (file : java.io.File) =
@@ -40,16 +40,19 @@ for (
 ```
 
 可以使用花括号，则无须添加 ;
-```
+
+```scala
 for {
   file <- filesHere if file.isFile
   line <- fileLines(file)
 } println(file + ":" + line.trim)
 ```
 
-3.4 定义中间变量
+#### 3.4 定义中间变量
+
 对于生成器的结果处理后绑定到中间变量，避免多次 line.trim
-```
+
+```scala
 for {
   file <- filesHere if file.isFile
   line <- fileLines(file)
@@ -58,12 +61,15 @@ for {
 } println(file + ":" + trimmed)
 ```
 
-3.5 生成新集合
-```
+#### 3.5 生成新集合
+
+```scala
 for clauses yield body
 ```
+
 例如：
-```
+
+```scala
 val filesHere = (new java.io.File(".")).listFiles
 val m = for {
   file <- filesHere if file.isFile
@@ -74,10 +80,11 @@ val m = for {
 m.foreach(println)
 ```
 
+### 4 try 处理异常
 
-4.try 处理异常
 抛出异常
-```
+
+```scala
 val half:Int =
   if (n % 2 == 0)
     n/2
@@ -87,7 +94,8 @@ val half:Int =
 
 捕获异常
 如果都不是，则向上传递该异常
-```
+
+```scala
 try {
   val f = new FileReader("/home/hadoop/input.txt")
 } catch {
@@ -97,7 +105,8 @@ try {
 ```
 
 finally 语句
-```
+
+```scala
 val f = new FileReader("/home/hadoop/input.txt")
 try {
     print("ok")
@@ -109,10 +118,11 @@ try {
 }
 ```
 
-生成返回值
-注意比较不同
+生成返回值，注意比较不同
+
 finally 没有 return 返回 1，否则返回 2
-```
+
+```scala
 def f(): Int = try {
   return 1
 } finally {
@@ -122,7 +132,8 @@ println(f()) // output: 1
 ```
 
 有 return 返回 2
-```
+
+```scala
 def f(): Int = try {
   return 1
 } finally {
@@ -131,9 +142,9 @@ def f(): Int = try {
 println(f()) // output: 2
 ```
 
+### 5 Match 表达式
 
-5.Match 表达式
-```
+```scala
 val args = Array("chips")
 val firstArg = if (args.length >0 ) args(0) else ""
 firstArg match {
@@ -144,8 +155,9 @@ firstArg match {
 }
 ```
 
-表达式是有返回值的，上面的代码可以转换为：
-```
+表达式是有返回值的，上面的代码可以转换为
+
+```scala
 val args = Array("chips")
 val firstArg = if (args.length >0 ) args(0) else ""
 val friend = firstArg match {
@@ -158,15 +170,16 @@ val friend = firstArg match {
 println(friend)
 ```
 
-和Java的 switch 语句比较，Scala的 match 有以下几个不同点：
+和 java的 switch 语句比较，Scala的 match 有以下几个不同点：
 
-match 为一表达式，有返回结果，其返回结果为匹配项表示式的值。
-match 的选项没有 break ，也不会自动匹配下一个选项（no fall through)。
-如果没有一个选项匹配，那么将抛出 MatchError 异常，这意味着你必须保证考虑到Match的所有的选项，因此可能你需要添加一个缺省选项。
+ 1. match 为表达式，有返回结果，其返回结果为匹配项表示式的值。   
+ 2. match 的选项没有 break ，也不会自动匹配下一个选项（no fall through)。   
+ 3. 如果没有一个选项匹配，那么将抛出 MatchError 异常，这意味着你必须保证考虑到Match的所有的选项，因此可能你需要添加一个缺省选项。
 
 
-6.没有 break 与 continue
-```
+### 6 没有 break 与 continue
+
+```scala
 def main(args: Array[String]): Unit = {
   println(findFrom(0, "li", "-23scala", "23ds", "23scala"))
   println(whileFindFrom( "li", "-23scala", "23ds","23scala"))
