--- a/scala/07.面向对象——组合与继承.md
+++ b/scala/07.面向对象——组合与继承.md
@@ -1,5 +1,8 @@
-1.定义一个抽象类
-```
+## 07 面向对象 —— 组合与继承
+
+### 1 定义一个抽象类
+
+```scala
 abstract class Element {
   // 添加一个没有方法体的抽象方法（目的：我声明有这个方法，你必须要去实现）
   def contents: Array[String]
@@ -14,9 +17,9 @@ abstract class Element {
 ```
 
 
-2.继承抽象类，重写抽象方法
+### 2 继承抽象类，重写抽象方法
 
-如果你在定义类时没有使用 extends 关键字，在 Scala 中，这个定义类默认继承自 scala.AnyRef，如同在 Java 中缺省继承自 java.lang.Object
+如果你在定义类时没有使用 `extends` 关键字，在 `Scala` 中，这个定义类默认继承自 `scala.AnyRef`，如同在 Java 中缺省继承自 `java.lang.Object`
 
 继承关系图
 
@@ -30,16 +33,16 @@ abstract class Element {
           ArrayElement <--- Array[String]
 
 
-```
+```scala
 class ArrayElement(conts: Array[String]) extends Element {
   override def contents: Array[String] = conts
 }
 ```
 
 
-3.参数化成员变量
+### 3 参数化成员变量
 
-```
+```scala
 class ArrayElement(conts: Array[String]) extends Element {
   override val contents: Array[String] = conts
 }
@@ -51,11 +54,13 @@ class ArrayElement(override val contents: Array[String]) extends Element {
 ```
 
 
-4.final 的用法
+###  4 final 的用法
+
 既可以在方法上，也可以用在类上
 
-不可被重写方法
-```
+定义方法不可被重写
+
+```scala
 class ArrayElement extends Element { 
   final override def demo() { 
     println("ArrayElement's implementation invoked") 
@@ -64,7 +69,8 @@ class ArrayElement extends Element {
 ```
 
 定义不可变对象
-```
+
+```scala
 final class ArrayElement extends Element { 
    override def demo() { 
     println("ArrayElement's implementation invoked") 
@@ -73,9 +79,11 @@ final class ArrayElement extends Element {
 ```
 
 
-5.定义 factory 对象
+### 5 定义 factory 对象
+
 提供静态方法直接生成一个单例实例：
-```
+
+```scala
 object Element {
 
   private class ArrayElement(val contents: Array[String])
