--- a/scala/09.Trait.md
+++ b/scala/09.Trait.md
@@ -1,5 +1,8 @@
-1.声明与使用
-```
+## 09 Trait
+
+### 1 声明与使用
+
+```scala
 trait Philosophical{
   def philosophize() {
     println("I consume memeory, therefor I am!")
@@ -8,14 +11,16 @@ trait Philosophical{
 ```
 
 默认继承基类 AnyRef，重写特质 Philosophical
-```
+
+```scala
 class Frog extends Philosophical{
   override def toString="gree"
 }
 ```
 
 继承基类 Animal，重写特质 Philosophical、HasLegs
-```
+
+```scala
 class Animal
 trait HasLegs 
 
@@ -25,16 +30,20 @@ class Frog extends Animal with Philosophical with HasLegs{
 ```
 
 
-2.示例
+### 2 示例
+
 派生自 Ordered，重写 compare 方法
-```
+
+```scala
 class Rational (n:Int, d:Int) extends Ordered[Rational]{
   override def compare (that:Rational)=
     (this.numer*that.denom)-(that.numer*that.denom)
 }
 ```
+
 Ordered 源码
-```
+
+```scala
 trait Ordered[A] extends Any with java.lang.Comparable[A] {
 
   def compare(that: A): Int
@@ -52,24 +61,30 @@ trait Ordered[A] extends Any with java.lang.Comparable[A] {
 ```
 
 
-3.可叠加的修改操作
+### 3 可叠加的修改操作
+
 基抽象类
-```
+
+```scala
 abstract class IntQueue {
   def get():Int
   def put(x:Int)
 }
 ```
+
 简单的重写
-```
+
+```scala
 class BasicIntQueue extends IntQueue{
   private val buf =new ArrayBuffer[Int]
   def get()= buf.remove(0)
   def put(x:Int) { buf += x }
 }
 ```
+
 定义接口动态修改
-```
+
+```scala
 trait Doubling extends IntQueue{
   abstract override def put(x:Int) { super.put(2*x)}
 }
@@ -85,7 +100,8 @@ trait Filtering extends IntQueue{
 ```
 
 使用 Doubling Trait
-```
+
+```scala
 scala> val queue = new BasicIntQueue with Doubling
 queue: BasicIntQueue with Doubling = $anon$1@3b004676
 
