--- a/scala/10.包管理.md
+++ b/scala/10.包管理.md
@@ -1,10 +1,15 @@
-一、包的声明
-* 包的嵌套
+## 10 包管理
 
-* 包的非连续声明
+### 1 包的声明
+
+#### 1.1 包的嵌套
+
+#### 1.2 包的非连续声明
+
 如果你想导入的包 都有包级别的声明，比如类的声明，那么应该为包层次中的每个包使用单独的 package 语句。
 每个后续的包都被解释为上一个包的子包。
-```
+
+```scala
 // Bring into scope all package level declarations in "example".
 package com.example
 // Bring into scope all package level declarations in "mypkg".
@@ -15,27 +20,34 @@ class MyPkgClass {
 }
 ```
 
-* 不能在对象中声明包，脚本被隐含包装在一个对象中，在对象中声明包也是不允许的
+__注意__
+
+不能在对象中声明包，脚本被隐含包装在一个对象中，在对象中声明包也是不允许的
 
 
-二、包的导入
+### 2 包的导入
+
 导入某个包下的所有类
-```
+
+```scala
 import java.awt._
 ```
 
 导入单独某个类
-```
+
+```scala
 import java.io.File
 ```
 
 导入某个类中的所有静态方法和属性
-```
+
+```scala
 import  java.io.File._
 ```
 
 其它用法
-```
+
+```scala
 //选择性导入 =>表示重命名）
 import Fruits.{Apple=>MaIntosh,Orange}
 
@@ -48,7 +60,8 @@ import Fruits.{Apple=>_,_}
 ```
 
 默认导入
-```
+
+```scala
 import java.lang._   //everything in the java.lang package
 //注意这里的 scala._ 指所有 scala 下的包，包括子包。
 import scala._       //scala.package 导入包对象中的所有定义
@@ -56,7 +69,8 @@ import Predef._
 ```
 
 导入语句可以放在任意位置上
-```
+
+```scala
 package bobsdelights
 
 abstract class Fruit(
