--- a/scala/01.起步.md
+++ b/scala/01.起步.md
@@ -1,15 +1,22 @@
-1.语法潜规则
-①如果一个方法接受一个函数作为参数，并且该方法没有重载，那么可以传递一个方法，会自动转换成函数
-```
+## 01 起步
+
+### 1 语法潜规则
+
+① 如果一个方法接受一个函数作为参数，并且该方法没有重载，那么可以直接传递方法作为参数（自动换为函数）
+
+```scala
 args.foreach(println)
 ```
+
 等价于
-```
+
+```scala
 args.foreach(println _)
 ```
 
-源码参考
-```
+foreach 源码参考
+
+```scala
 def foreach[U](f: A => U): Unit = {
   var i = 0
   val len = length
@@ -17,21 +24,25 @@ def foreach[U](f: A => U): Unit = {
 }
 ```
 
-②如果一个方法没有参数或只有一个参数(可以有重载方法)，可以省略括号与.
-比如 2 abs 求绝对值；又比如 for(i <- 1 to 3)，这里的 1 to 3 相当于 (1).to(3)
-如果有多个参数，也可以省略点  
+② 如果一个方法没有参数或只有一个参数(可以有重载方法)，可省略括号与点。比如 `2 abs` 求绝对值；又比如 `for(i <- 1 to 3)`，这里的 `1 to 3` 相当于 `(1).to(3)`
 
-③一个对象实例的 `arr(1)` 方法是 apply(x:Int) 的省略，`arr(1) = 3` 方法是 update(x:Int, y:Int) 的省略
+③ 一个对象实例的 `arr(1)` 方法是 apply(x:Int) 的省略，`arr(1) = 3` 方法是 update(x:Int, y:Int) 的省略
 
-④以:开头的操作符都是右操作符，比如 7 :: li 等价于 li.::(7)
+④ 以:开头的操作符都是右操作符，比如 7 :: li 等价于 li.::(7)
 
-⑤包含有两个参数的类型的中缀表达式，只能用于类型表示，不可用于初始化。初始化需要额外提供一个方法。比如 val with1: String With Int  = With("Bar", 2)
+⑤ 包含有两个参数的类型的中缀表达式，只能用于类型表示，不可用于初始化。初始化需要额外提供一个方法。  比如
 
-2.循环语句与循环表达式
+```
+val with1: String With Int  = With("Bar", 2)
+```
+
+
+### 2 循环语句与循环表达式
+
 - 索引循环 while 语句
 - for / foreach 循环表达式
 
-```
+```scala
 val arr = Array("zhang san", "lisi", "wangwu")
 var i = 0
 val len = arr.length
@@ -41,28 +52,30 @@ while (i < len) {
 }
 ```
 
-```
+```scala
 val arr = Array("zhang san", "lisi", "wangwu")
 for (elem <- arr) {
   println(elem)
 }
 ```
 
-```
+```scala
 args.foreach(println)
 ```
 
+### 3 容器类 参数化数组、List、tuple、set、map
 
-3.容器类 参数化数组、List、tuple、set、map
-
-3.1 数组
+#### 3.1 数组
+```
 val arr =  Array[String]("zhang san", "hill", "wangwu") <!-- 固定值 -->
 
 val arr2 = new Array[String](10) <!-- 固定长度 -->
-
-3.2 List 列表
-不可变的 List，添加元素操作会生成新的 List
 ```
+
+#### 3.2 List 列表
+不可变的 List，添加元素操作会生成新的 List
+
+```scala
 val lt1 = List[Int](2,3,4)
 
 val lt3 = 5 :: lt2 //51234 前添加
@@ -77,7 +90,8 @@ val lt5 = lt3 ++ lt4 //5123412346
 ```
 
 可变 List
-```
+
+```scala
 val ml = new  mutable.ListBuffer[Int]()
 // ml 实现了 SqlLike，因此有 +:， :+ 方法。虽然没有 :: 与 ::: 方法，但是有 += 与 ++= 方法，另外还有 ++ 方法，用于生成新的列表
 
@@ -85,17 +99,25 @@ ml += 5 // addOne
 3 +=: l // prepend
 ml(1) = 1
 ```
+
 Scala 的 List 类还定义了其它很多很有用的方法，比如 head、last、length、reverse、tail 等
 
-3.3 tuple 元组
+#### 3.3 tuple 元组
+
 对应数学终矢量的概念，可以包含不同类型的数据，scala支持最大的元组长度为22
+
+```
 val tp1 = (1,3, "lisi")
 println(tp1._1)
+```
 
-3.4 set 集合 与 map 映射
+#### 3.4 set 集合 与 map 映射
 默认都是不可变的
+
+```scala
 val set1 = Set[Int](2, 3, 4)
 println(set1.contains(2))
 
 val mp1 = Map(2 -> "li", 3 -> "wang", 4 -> "long")
 println(mp1(2))
+```
