--- a/scala/06.函数的高级用法.md
+++ b/scala/06.函数的高级用法.md
@@ -1,12 +1,16 @@
-1.尾递归
-```
+## 06 函数的高级用法
+
+### 1 尾递归
+
+```scala
 def approximate(guess: Double) : Double =
   if (isGoodEnough(guess)) guess
   else approximate(improve(guess))
 ```
 
 对比 while 写法
-```
+
+```scala
 def approximateLoop(initialGuess: Double) : Double = {
   var guess = initialGuess
   while(!isGoodEnough(guess))
@@ -15,18 +19,22 @@ def approximateLoop(initialGuess: Double) : Double = {
  }
 ```
 
+__注意__
+
 当一个调用自身的方法，有可能会被子类重写，尾递归是无效的。所以尾递归的方法必须用 private 或 final 声明，或者将它嵌套在另一个方法中。
 
 
-2.高阶函数
-闭包：
-所谓闭包即函数与函数所在上下文（自由变量）所构成的一个整体，叫作函数闭包
-偏应用函数是闭包的一种实现，它拥有自由变量上下文（被传递的参数中），并且它是一个函数，符合闭包的定义。除此之外，更常见的是自由变量在另一个函数体内。
+### 2 高阶函数
 
 高阶函数：函数作为另一函数的参数被传递
 
-函数作为参数，
-```
+>闭包：
+所谓闭包即函数与函数所在上下文（自由变量）所构成的一个整体，叫作函数闭包
+偏应用函数是闭包的一种实现，它拥有自由变量上下文（被传递的参数中），并且它是一个函数，符合闭包的定义。除此之外，更常见的是自由变量在另一个函数体内。
+
+函数作为参数
+
+```scala
 def filesMatching( query:String, 
     matcher: (String,String) => Boolean) = {
     for(file <- filesHere; if matcher(file.getName,query))
@@ -42,8 +50,10 @@ def filesContaining(query:String)=
 def filesRegex(query:String) =
    filesMatching(query,_.matches(_))
 ```
+
 再简化
-```
+
+```scala
 object FileMatcher {
   private def filesHere = (new java.io.File(".")).listFiles
 
@@ -64,36 +74,39 @@ object FileMatcher {
 }
 ```
 
-```
+```scala
 def twice (op:Double => Double, x:Double) =op(op(x))
 twice(_ + 1, 5) //output: 7
 ```
 
 执行多次可以泛化
-```
+
+```scala
 def times(f: => Unit)(cnt:Int) :Unit = {
   List.fill(cnt){f}
 }
 ```
 
 
-3.函数柯里化
-```
+### 3 函数柯里化
+
+```scala
 def curriedSum(x:Int)(y:Int) = x + y
 
 curriedSum (1)(2)
 ```
 
 
-4.综合使用高阶函数与函数柯里化
-```
+### 4 综合使用高阶函数与函数柯里化
+
+```scala
 import scala.io._
 import java.io._
 def withPrintWriter (file: File)( op: PrintWriter => Unit) {
   val writer=new PrintWriter(file)
-  try{
+  try {
     op(writer)
-  }finally{
+  } finally{
     writer.close()
   }
 }
@@ -102,14 +115,13 @@ def withPrintWriter (file: File)( op: PrintWriter => Unit) {
 withPrintWriter(new File("date.txt")){
   writer => writer.println(new java.util.Date)
 }
-
 ```
 
+### 5 名调用与语法块结构
 
-5.名调用与语法块结构
 从上面4的示例可以看出，当函数的参数只有一个时，可以使用 {}，当然了这个参数可以是函数，就像4中示例的那样。除此之外，如果这个函数的形参列表是空。那么还可以进一步简化：
 
-```
+```scala
 def withHelloWorld (op: => Unit) {
   op   
   println("Hello,world")
@@ -122,6 +134,7 @@ withHelloWorld {
 withHelloWorld(() => println("hello,Guidebee"))
 ```
 
-说明：
+__说明__
+
 关于无参数函数，如果该函数有返回值，则是将返回值延迟，因为这跟你传递一个返回结果是类似的，即一个在传参的时候调用了一下f()，另一个是在执行的时候调用了一下f()。
 惰性求值不缓存结果。
