--- a/scala/专题2——抽象成员.md
+++ b/scala/专题2——抽象成员.md
@@ -1,7 +1,10 @@
-一、抽象成员
+## 专题 2 —— 抽象成员
+
+### 一、抽象成员
 
 在 scala 中，抽象成员是指在抽象类或trait中没有完整定义的元素，其中包含成员函数，成员变量与抽象类型：
-```
+
+```scala
 trait Abstract {
     type T
     def transform(x:T) :T
@@ -11,7 +14,8 @@ trait Abstract {
 ```
 
 简单地重写
-```
+
+```scala
 class Concrete extends Abstract {
     type T = String
     def transform(x:String) = x + x
@@ -21,33 +25,41 @@ class Concrete extends Abstract {
 ```
 
 
-二、抽象类型
-抽象类型是定义一个占位符类型
-有如下定义
-```
+### 二、抽象类型
+
+抽象类型是定义一个占位符类型，有如下定义
+
+```scala
 class Food
 abstract class Animal {
     def eat(food: Food)
 }
 ```
+
 实现牛吃草
-```
+
+```scala
 class Grass extends Food
 class Cow extends Animal {
     override def eat(food: Grass) {}
 }
 ```
-这里会报错，因为 eat 方法参数类型不匹配。方法不能被重载
-使用抽象类型来解决这个问题：
-```
+
+这里会报错，因为 eat 方法参数类型不匹配。方法不能被重载。
+
+使用抽象类型来解决这个问题
+
+```scala
 class Food
 abstract class Animal {
     type SuitableFood <: Food //上界限制
     def eat(food:SuitableFood)
 }
 ```
+
 注入实际类型
-```
+
+```scala
 class Grass extends Food
 class Cow extends Animal {
     type SuitableFood = Grass
@@ -56,9 +68,11 @@ class Cow extends Animal {
 ```
 
 
-三、抽象成员预初始化
-https://docs.scala-lang.org/tutorials/FAQ/initialization-order.html
-```
+### 三、抽象成员预初始化
+
+[initialization-order](https://docs.scala-lang.org/tutorials/FAQ/initialization-order.html)
+
+```scala
 abstract class A {
   val x1: String
   val x2: String = "mom"
@@ -77,42 +91,58 @@ class C extends B {
 }
 new C
 ```
-打印的结果：
-```
+
+打印的结果
+
+```scala
 A: null, null
 B: hello, null
 C: hello, dad
 ```
-（看似 A 有一个默认的初始值，因为类 C 中重载了 x2。这意味着特质 A 构造时，给bar 分配了一个缺省初始值
-null，而不是原有的值 "mom"）
 
-特质中 val 的初始化和重写规则：
-* 超类会在子类之前初始化，超类先初始化，子类再初始化；
-
-* 当一个 val 被重写时，只能初始化一次。例如，x2 在 B处初始化了，并且在 C处也初始化了，只有C处的生效。
-
-如果 x2 同时在 B、C 两处初始化，打印的结果是
-A: null, null
-B: hello, null
-C: hello, dad
-
-如果 x2 仅在B处初始化则，打印的结果是
-A: null, null
-B: hello, dad
-C: hello, dad
-
-如果 x2不发生重写，初始值就是默认初始值。打印的结果是
-A: null, mom
-B: hello, mom
-C: hello, mom
-
-* 与抽象 val 类似，重载的 val 在超类构造期间会有一个缺省的初始化。
+看似 A 有一个默认的初始值，因为类 C 中重载了 x2。这意味着特质 A 构造时，给bar 分配了一个缺省初始值
+null，而不是原有的值 "mom"。
 
 
-解决
+__特质中 val 的初始化和重写规则__
+
+
+① 超类会在子类之前初始化，超类先初始化，子类再初始化；
+
+② 当一个 val 被重写时，只能初始化一次。例如，x2 在 B处初始化了，并且在 C处也初始化了，只有C处的生效。
+
+    如果 x2 同时在 B、C 两处初始化，打印的结果是
+
+    ```scala
+    A: null, null
+    B: hello, null
+    C: hello, dad
+    ```
+
+    如果 x2 仅在B处初始化则，打印的结果是
+
+    ```scala
+    A: null, null
+    B: hello, dad
+    C: hello, dad
+    ```
+
+    如果 x2不发生重写，初始值就是默认初始值。打印的结果是
+
+    ```scala
+    A: null, mom
+    B: hello, mom
+    C: hello, mom
+    ```
+
+③ 与抽象 val 类似，重载的 val 在超类构造期间会有一个缺省的初始化。
+
+
+__解决方案__
 
 （1）预先初始化成员的值
-```
+
+```scala
 trait Person {
   val name:String
   val age:Int
@@ -133,7 +163,8 @@ class Kid extends {
 ```
 
 this 不指向当前所构造的对象，而是指向定义当前方法的所在对象
-```
+
+```scala
 object ITest {
   val m = 3
 
@@ -147,7 +178,8 @@ object ITest {
 ```
 
 （2）延迟初始化
-```
+
+```scala
 trait LazyRationalTrait{
     val numerArg :Int
     val denomArg :Int
@@ -167,17 +199,20 @@ trait LazyRationalTrait{
 ```
 
 
-四、关于重写
-参看 “三、抽象成员预初始化” 中的第一个例子
+### 四、关于重写
 
-注意：
-val x1 没有完整的定义，属于抽象成员。则重写时不需要添加  override 修饰符，否则必须加 override
+参看 [三、抽象成员预初始化](#三、抽象成员预初始化) 中的第一个例子
 
-父类中的 var 不可被 override
+__注意__
 
-钻石结构
+- val x1 没有完整的定义，属于抽象成员。则重写时不需要添加  override 修饰符，否则必须加 override
+- 父类中的 var 不可被 override
+
+__钻石结构__
+
 所谓的钻石结构就是一个菱形的结构，一个基类，两个子类，最后一个类又继承这两个子类。那么如果这两个子类都包含一个基类的方法，那么最后的这个类也有这个方法，选择继承那个子类呢？
-```
+
+```scala
 /*
 diamond problem
 */
