--- a/scala/专题3——提取器.md
+++ b/scala/专题3——提取器.md
@@ -1,19 +1,25 @@
-一、提取器概念
-提取器对象是一个包含有 unapply 方法的单例对象。
-unapply 方法接受一个实例对象然后返回最初创建它所用的参数。
-提取器常用在模式匹配和偏函数中。
+## 专题 3 —— 提取器
+
+### 一、提取器概念
+
+1. 提取器对象是一个包含有 `unapply` 方法的单例对象。
+2. `unapply` 方法接受一个实例对象然后返回最初创建它所用的参数。
+3. 提取器常用在模式匹配和偏函数中。
 
 
-二、unapply的返回值
-unapply 方法的返回值应当符合下面的某一条
- - 如果只是用来判断真假，可以返回一个 Boolean 类型的值。例如 case even()。
- - 如果只是用来提取单个 T 类型的值，可以返回 Option[T]。
- - 如果你想要提取多个值，类型分别为 T1,...,Tn，可以把它们放在一个可选的元组中 Option[(T1,...,Tn)]。
+### 二、unapply的返回值
 
-有时，要提取的值的数量不是固定的，因此我们想根据输入来返回随机数量的值。这种情况下，你可以用 unapplySeq 方法来定义提取器， 此方法返回 Option[Seq[T]]。常见的例子有，用 case List(x, y, z) => 来解构一个列表 List， 以及用一个正则表达式 Regex 来分解一个字符串 String，例如 case r(name, remainingFields @ _*) =>。
+`unapply` 方法的返回值应当符合下面的某一条
+
+ - 如果只是用来判断真假，可以返回一个 `Boolean` 类型的值。例如 `case even()`。
+ - 如果只是用来提取单个 `T` 类型的值，可以返回 `Option[T]`。
+ - 如果你想要提取多个值，类型分别为 `T1,...,Tn`，可以把它们放在一个可选的元组中 `Option[(T1,...,Tn)]`。
+
+有时，要提取的值的数量不是固定的，因此我们想根据输入来返回随机数量的值。这种情况下，你可以用 `unapplySeq` 方法来定义提取器， 此方法返回 `Option[Seq[T]]`。常见的例子有，用 `case List(x, y, z) =>` 来解构一个列表 List， 以及用一个正则表达式 Regex 来分解一个字符串 String，例如 `case r(name, remainingFields @ _*) =>`。
 
 示例1：不提取值(只判断真假)
-```
+
+```scala
 object UpperCase {
   def unapply(s: String): Boolean = s.toUpperCase == s
 }
@@ -27,7 +33,8 @@ s match {
 ```
 
 示例2：提取单个值
-```
+
+```scala
 object Twice {
     def apply(s:String) = s + s
     def unapply(s:String):Option[String] ={
@@ -39,7 +46,8 @@ object Twice {
 ```
 
 示例3：提取多个值(传的元组)
-```
+
+```scala
 object Email {
     def apply(user:String,domain:String) = user + "@" + domain
     def unapply(str:String) :Option[(String,String)] ={
@@ -52,7 +60,8 @@ case EMail(user,domain) =>
 ```
 
 示例4：提取多个值(传的Seq)
-```
+
+```scala
 object Domain{
     def apply(parts:String *) :String = parts.reverse.mkString(".")
     def unapplySeq(whole:String): Option[Seq[String]] =
@@ -63,14 +72,15 @@ case Domain("com",_*) =>
 ```
 
 
-三、正则表达式
+### 三、正则表达式
 
-```
+```scala
 val date = raw"(\d{4})-(\d{2})-(\d{2})".r
 ```
 
 查询字符串
-```
+
+```scala
 val dates = "Important dates in history: 2004-01-20, 1958-09-05, 2010-10-06, 2011-07-15"
 regex findPrefixOf str //查询单个
 val firstDate = date.findFirstIn(dates).getOrElse("No date found.") //查询单个
@@ -84,14 +94,16 @@ while (mi.hasNext) {
 ```
 
 替换字符串
-```
+
+```scala
 val redacted    = date.replaceAllIn(dates, "XXXX-XX-XX")
 val yearsOnly   = date.replaceAllIn(dates, m => m.group(1))
 val months      = (0 to 11).map { i => val c = Calendar.getInstance; c.set(2014, i, 1); f"$c%tb" }
 ```
 
 提取器
-```
+
+```scala
 //直接匹配
 "2004-01-20" match {
   case date(year, _*) => s"$year was a good year for PLs."
