--- a/fpinscala/02.函数式数据结构.md
+++ b/fpinscala/02.函数式数据结构.md
@@ -164,8 +164,10 @@ def filter[A](as: List[A])(f: A => Boolean): List[A] =
     }
   }
 
+// 原生的方法应该是 flatten，如 List(List(2),List(3)).flatten
 def flatMap[A, B](as: List[A])(f: A => List[B]): List[B] =
   concat(map(as)(f))
+
 
 def filterViaFlatMap[A](as: List[A])(f: A => Boolean): List[A] =
   flatMap(as)(x => if (f(x)) List(x) else Nil)
