--- a/fpinscala/04.严格求值与惰性求值.md
+++ b/fpinscala/04.严格求值与惰性求值.md
@@ -60,6 +60,7 @@ sealed trait Stream[+A] {
   }
 
   //返回前n个数
+  // 这里 n == 1 看似多余，其实是避免 tail 引用，具体参看官网源码注释。
   def take(n: Int): Stream[A] = this match {
     case Cons(h, t) if n > 1 => Stream.cons(h(), t().take(n - 1))
     case Cons(h, _) if n == 1 => Stream.cons(h(), Stream.empty)
