--- a/scala/01.起步.md
+++ b/scala/01.起步.md
@@ -24,11 +24,11 @@ def foreach[U](f: A => U): Unit = {
 }
 ```
 
-② 如果一个方法没有参数或只有一个参数(可以有重载方法)，可省略括号与点。比如 `2 abs` 求绝对值；又比如 `for(i <- 1 to 3)`，这里的 `1 to 3` 相当于 `(1).to(3)`
+② 如果一个方法没有参数（后缀表示法）或只有一个参数(中缀表示法)，可省略括号与点。比如 `2 abs` 求绝对值；又比如 `for(i <- 1 to 3)`，这里的 `1 to 3` 相当于 `(1).to(3)`
 
 ③ 一个对象实例的 `arr(1)` 方法是 apply(x:Int) 的省略，`arr(1) = 3` 方法是 update(x:Int, y:Int) 的省略
 
-④ 以:开头的操作符都是右操作符，比如 7 :: li 等价于 li.::(7)
+④ 以:结尾的操作符都是右操作符，比如 7 :: li 等价于 li.::(7), 又或者 5 +: li
 
 ⑤ 包含有两个参数的类型的中缀表达式，只能用于类型表示，不可用于初始化。初始化需要额外提供一个方法。  比如
 
