--- a/scala/08.面向对象——类的层级关系.md
+++ b/scala/08.面向对象——类的层级关系.md
@@ -1,4 +1,4 @@
-## 08 面向对象 —— 类的层级关系
+`## 08 面向对象 —— 类的层级关系
 
 ### 1 类的层级概况
 
@@ -43,3 +43,18 @@ case object Nil extents List[Nothing]
 ```
 
 因为 `trait List` 具有协变型，所以 Nil 是所有 List（比如 `List[Int]、List[Double]`）的一个具体类型。
+
+
+* 小说明
+AnyVal 使用的是 abstract class AnyVal，而 AnyRef 使用的是 trait AnyRef。因为 java中的 class 是单继承，所以使用 abtract class 可以很好地避免子类继承多个父类。而 trait 本身是可以多继承的，所以子类可以继承多个 AnyRef。
+
+
+* 类型关系运算符
+A =:= B A 必须和 B相等
+A <:< B A 必须是 B的子类
+
+```
+import scala.reflect.runtime.universe._
+typeOf[Int] =:= typeOf[Int]
+typeOf[Int] <:< typeOf[Any]
+```
