--- a/scala/09.Trait.md
+++ b/scala/09.Trait.md
@@ -111,3 +111,41 @@ scala> queue.get()
 res1: Int = 20
 ```
 
+### 4 自类型标记
+
+自类型标记（self-type annotation)
+1.它允许为 this 指定额外的类型期望
+2.它可以被用于创建 this 的别名(常可用于依赖注入各种模块)
+
+trait 中，如果不进行自类型标记，this 默认指向 Trait 类型，而非实例。
+
+trait 可以定义一些实例方法，跟普通的class类一样，方法参数列表中包含隐含的this，指向实例本身。trait 同样有这样的需求，但是 trait 本身不可直接实例化，因此 this 指向的实例的类型可能并非 trait本身的类型。
+
+使用自类型标记通常与使用继承和混入等价（除了没有定义 self外）。通常来说，self-type 强调 功能/模块的组合，
+而继承强调父子类关系。
+
+```
+abstract class SubjectObservero {
+
+  type S <: Subject
+  type O <: Observer
+  6
+
+  trait Subject {
+    self: S =>
+    private var observers = List[O]()
+
+    def addObserver(observer: O) = {
+      observers ::= observer
+    }
+
+    def notifyObservers() = observers.foreach(_.receiveUpdate(self))
+  }
+
+  trait Observer {
+    def receiveUpdate(subject: S)
+  }
+
+}
+```
+
