--- a/scala/专题1——模式匹配.md
+++ b/scala/专题1——模式匹配.md
@@ -64,6 +64,22 @@ def describe(x:Any) =x match {
     case _ => "something else"
 }
 ```
+也可以引用之前已经定义的变量（使用反引号将其包围）
+```
+def checkY(y: Int) = {
+  for {
+    x <- Seq(99,100,101)
+  } {
+    val str = x match {
+      case `y` => "found y"
+      case i: Int => "int: " + i
+    }
+    println(str)
+  }
+}
+checkY(100)
+```
+
 
 ③ 变量模式
 
