--- a/scala/专题2——抽象成员.md
+++ b/scala/专题2——抽象成员.md
@@ -100,7 +100,7 @@ B: hello, null
 C: hello, dad
 ```
 
-看似 A 有一个默认的初始值，因为类 C 中重载了 x2。这意味着特质 A 构造时，给bar 分配了一个缺省初始值
+看似 A 有一个默认的初始值，因为类 C 中重载了 x2。这意味着特质 A 构造时，给 B 分配了一个缺省初始值
 null，而不是原有的值 "mom"。
 
 
@@ -245,4 +245,57 @@ object Testclass {
 I am Dog
 I am monkeyCat
 */
+```
+
+### 结构类型
+Scala 支持 结构类型（structural types） — 类型需求由接口 结构 表示，而不是由具体的类型表示。
+
+```
+scala> def foo(x: { def get: Int }) = 123 + x.get
+foo: (x: AnyRef{def get: Int})Int
+
+scala> foo(new { def get = 10 })                 
+res0: Int = 133
+```
+
+这可能在很多场景都是相当不错的，但这个实现中使用了反射，所以要注意性能！
+
+
+### 特质中的抽象类型成员
+你可以使用 hash 操作符来引用一个抽象类型的变量：
+
+```
+scala> trait Foo[M[_]] { type t[A] = M[A] }
+defined trait Foo
+
+scala> val x: Foo[List]#t[Int] = List(1)
+x: List[Int] = List(1)
+```
+
+### 抽象类型与参数化类型
+如果类型参数用于构造器时，应当使用参数化类型，因为抽象类型不在构造器参数列表的作用域内。
+
+以下场景可用于抽象类型:
+
+```
+abstract class BulkReader {
+  type In
+  val source: In
+
+  def read: String
+}
+
+class StringBulkReader(val source: String) extends BulkReader {
+  type In = String
+
+  def read: String = source
+}
+
+class FileBulkReader(val source:File) extends BulkReader {
+  type In = File
+  
+  def read: String = {
+    ""
+  }
+}
 ```
