--- a/scala/专题3——提取器.md
+++ b/scala/专题3——提取器.md
@@ -4,8 +4,7 @@
 
 1. 提取器对象是一个包含有 `unapply` 方法的单例对象。
 2. `unapply` 方法接受一个实例对象然后返回最初创建它所用的参数。
-3. 提取器常用在模式匹配和偏函数中。
-
+3. 提取器常用在模式匹配[^,]+和偏函数中。
 
 ### 二、unapply的返回值
 
