--- a/scala/05.函数.md
+++ b/scala/05.函数.md
@@ -24,13 +24,18 @@ x => x+1
 _ + 1
 ```
 
-否则的话，需要使用
+或者
 
 ```scala
 (x: Int) => x+1
 ``` 
 
 或者
+```scala
+{x:Int => x+1}
+```
+
+或者单独声明一个变量
 
 ```scala
 val g: Int => Int = _+1
@@ -50,6 +55,29 @@ f (5,10) //output: 15
 ```
 
 每个 _ 都是一个参数，前面的 _ 代表参数1，后面的 _ 代表参数2
+
+
+### 3 函数即对象
+函数是 trait Function1 - Function12 特质的集合。具有一个参数的函数是Function1特质的一个实例。这个特质定义了apply()语法糖，让你调用一个对象时就像你在调用一个函数。你可以使用 object 或 class 实现。
+
+```
+object addOne extends Function1[Int, Int] {
+   def apply(m: Int): Int = m + 1
+}
+```
+
+```
+class AddOne extends Function1[Int, Int] {
+   def apply(m: Int): Int = m + 1
+}
+```
+
+也可用字面量形式声明特质 Int => Int
+```
+class AddOne extends (Int => Int) {
+  def apply(m: Int): Int = m + 1
+}
+```
 
 
 ### 3 偏应用函数
@@ -171,7 +199,7 @@ names map { _.toUpperCase } filter { _.length > 5 }
 
 1. 不处理所有可能的输入，只处理那些能与至少一个 case 语句匹配的输入 
 2. 可以用 isDefineAt 方法测试特定输入是否与偏函数匹配 
-3. 偏函数之间可以链式连接
+3. 偏函数之间可以链式连接，如 OrElse、 andThen、applyOrElse
 
 ```scala
 val pf1:PartialFunction[Any, String] = {case s:String => "YES"}
@@ -184,14 +212,36 @@ try { pf("d").toString } catch { case _:MatchError => "ERROR!" }
 
 与偏应用函数的区别
 
-- 偏作用函数是一个表达式，带部分参数而发全部参数了列表的函数。
-- 偏函数是单参数的函数，并未对该类型的所有值都有定义。
+- 偏作用函数是一个函数，带部分参数而非全部参数列表的函数。
+- 偏函数可以看作是一个特殊的单参数的函数。 一个使用 case 字面量表示的偏函数，本质是 trait PartialFunction[A,B] 的一个实现（该 Trait 接收一个类型为A的参数，返回一个类型为B的结果，并未对该类型的所有值都有定义）。
+
 
 与 Option转换
-
 ```scala
 val sum2: PartialFunction[List[Int], Int] = {
   case x :: y :: _ => x + y
 }
 sum2.lift(List(2,3)) // Some(5)
 ```
+
+使用 case 语句替代函数写法
+```
+scala> case class PhoneExt(name: String, ext: Int)
+defined class PhoneExt
+
+scala> val extensions = List(PhoneExt("steve", 100), PhoneExt("robey", 200))
+extensions: List[PhoneExt] = List(PhoneExt(steve,100), PhoneExt(robey,200))
+
+scala> extensions.filter { case PhoneExt(name, extension) => extension < 200 }
+res0: List[PhoneExt] = List(PhoneExt(steve,100))
+```
+解释：PartialFunction 是 Function的子类型，所以filter也可以使用 PartialFunction！
+
+
+相关问题
+什么是 case 语句？
+这是一个名为PartialFunction的函数的子类。
+
+多个case语句的集合是什么？
+他们是共同组合在一起的多个PartialFunction。
+
