--- a/os/02.操作系统运行环境.md
+++ b/os/02.操作系统运行环境.md
@@ -15,19 +15,19 @@
   - 内核态：运行操作系统程序
   - 用户态：运行用户程序
 
-> 处理器的状态转换
-用户态 -> 内核态 中断、异常、陷入指令（如 int, trap, syscall, sysenter/sysexit）
-内核态 -> 用户态 设置PSW
+> 处理器的状态转换  
+- 用户态 -> 内核态 中断、异常、陷入指令（如 int, trap, syscall, sysenter/sysexit）  
+- 内核态 -> 用户态 设置PSW  
 
 
 ## 中断与异常机制
 
 ### 常见中断与异常
-中断举例：I/O中断，时钟中断，硬件中断
-异常举例：系统调用，页故障/页错误，保护性异常，断点指令，其他程序性异常
+中断举例：I/O中断，时钟中断，硬件中断  
+异常举例：系统调用，页故障/页错误，保护性异常，断点指令，其他程序性异常  
 
 ### 中断机制的工作原理
-若有中断，中断硬件将该中断触发器内容按规定编码送入PSW的相应位，称为中断码，通过查中断向量表引出中断处理程序。
+若有中断，中断硬件将该中断触发器内容按规定编码送入PSW的相应位，称为中断码，通过查中断向量表引出中断处理程序。  
 
 
 ## 系统调用
@@ -35,23 +35,19 @@
 ### 概念
 系统调用是除异常和中断外，操作系统提供给编程人员进入内核的唯一接口。每个操作系统都提供几百种系统调用（进程控制，进程通信，文件使用，目录操作，设备管理，信息维护等）。
 
-> 与库函数的关系
+> 与库函数的关系  
 应用程序->系统调用；应用程序->C函数库/API接口->系统调用。
 
 ### 系统调用执行过程
 当CPU执行到特殊的陷入指令时：
+1. 中断/异常机制：硬件保护现场；通过查中断向量表把控制权转给系统调用总入口程序
+2. 系统调用总入口程序：保存现场；将参数保存在内核堆栈里；通过查系统调用表把控制权转给相应的系统调用处理例程或内核函数
+3. 执行系统调用例程
+4. 恢复现场，返回用户程序
 
-中断/异常机制：硬件保护现场；通过查中断向量表把控制权转给系统调用总入口程序
-
-系统调用总入口程序：保存现场；将参数保存在内核堆栈里；通过查系统调用表把控制权转给相应的系统调用处理例程或内核函数
-
-执行系统调用例程
-
-恢复现场，返回用户程序
-
-> 例子
-用 int 80h 调用 第4号 系统调用 （即 write), 将 "hello world" 打印到标准输出
-(我用的是 at&t 风格的汇编，这是 gcc 默认使用的格式）
+> 例子  
+用 int 80h 调用 第4号 系统调用 （即 write), 将 "hello world" 打印到标准输出  
+(我用的是 at&t 风格的汇编，这是 gcc 默认使用的格式）  
 ```
 .data
 hello:
