--- a/os/03.进程线程模型.md
+++ b/os/03.进程线程模型.md
@@ -57,8 +57,8 @@ PCB —— Process Control Block，又称进程描述符。
 进程创建原语，进程撤销原语，阻塞原语，唤醒原语，挂起原语，激活原语，改变进程优先级。
 
 > 原语（primitive）又叫原子操作（atomic）  
-1. 完成特定功能的一段程序，具有不可分割或不可中断性  
-2. 即原语的执行必须是连续的，在执行过程中不允许被中断  
+> 1. 完成特定功能的一段程序，具有不可分割或不可中断性  
+> 2. 即原语的执行必须是连续的，在执行过程中不允许被中断  
 
 ### 进程的执行过程
 1. 进程的创建  
