--- a/os/02.操作系统运行环境.md
+++ b/os/02.操作系统运行环境.md
@@ -16,8 +16,8 @@
   - 用户态：运行用户程序
 
 > 处理器的状态转换  
-- 用户态 -> 内核态 中断、异常、陷入指令（如 int, trap, syscall, sysenter/sysexit）  
-- 内核态 -> 用户态 设置PSW  
+用户态 -> 内核态 中断、异常、陷入指令（如 int, trap, syscall, sysenter/sysexit）  
+内核态 -> 用户态 设置PSW  
 
 
 ## 中断与异常机制
@@ -48,7 +48,7 @@
 > 例子  
 用 int 80h 调用 第4号 系统调用 （即 write), 将 "hello world" 打印到标准输出  
 (我用的是 at&t 风格的汇编，这是 gcc 默认使用的格式）  
-```
+> ```
 .data
 hello:
         .string "Hello world\n"
@@ -61,5 +61,5 @@ main:
         int $0x80
         ret 
 ```
-把上面的内容存入 xxx.s ，然后用 gcc xxx.s -o xxx 即可编译出可执行文件。
+> 把上面的内容存入 xxx.s ，然后用 gcc xxx.s -o xxx 即可编译出可执行文件。
 
