--- a/mysql/02.索引.md
+++ b/mysql/02.索引.md
@@ -2,14 +2,14 @@
 
 ### B-Tree
 
-所有的值都是按顺序存储的，并且每一个叶子页到根的距离相同。多个索引列，按照定义索引时列的顺序对数据进行排序。
-适用场景：全键值、键值范围或最左前缀查询。
-限制：多个索引列，按最左匹配，不能跳过中间的索引列；如果存在某个列的范围查询，则其右边所有列都无法使用索引优化。
-举例:
+所有的值都是按顺序存储的，并且每一个叶子页到根的距离相同。多个索引列，按照定义索引时列的顺序对数据进行排序。  
+适用场景：全键值、键值范围或最左前缀查询。  
+限制：多个索引列，按最左匹配，不能跳过中间的索引列；如果存在某个列的范围查询，则其右边所有列都无法使用索引优化。  
+举例:  
 ```
 WHERE last_name='Smith' AND first_name LIKE 'J%' AND dob='1976-12-13'
 ```
-索引为 key(last_name, first_name, dob)，这里只有前两列用到了索引。
+> 索引为 key(last_name, first_name, dob)，这里只有前两列用到了索引。
 
 
 ### 哈系索引
