--- a/mysql/04.EXPLAIN.md
+++ b/mysql/04.EXPLAIN.md
@@ -142,3 +142,16 @@ key_len 列显示了在索引字段中可能的最大长度，而不是表中数
 
 
 
+### extra 列
+
+"Using index"
+表示 MySQL 将使用覆盖索引，以避免访问表。
+
+"Using where"
+这意味着 MySQL 服务器将在存储引擎检索行后再进行过滤。许多 WHERE 条件里设计索引的列，当（并且如果）它读取索引时，就能被存储引擎检验，因此不是所有带 WHERE 子句的查询都会显示 "Using where"。
+
+"Using temporary"
+这意味着 MySQL 在对查询结果排序时会使用一个临时表。
+
+"Using filesort"
+这意味着 MySQL 会对结果使用一个外部索引排序，而不是按索引次序从表里读取行。
