--- a/mysql/02.索引.md
+++ b/mysql/02.索引.md
@@ -115,7 +115,7 @@ WHERE film_id = 1;
 **缺点**  
 - 插入速度严重依赖插入顺序。  
 - 插入新行或主键被更新导致需要移动行时，可能面临“页分裂”的问题。  
-- 可能导致全部扫描变慢，尤其是行比较稀疏，或者由于页分裂导致数据存储不连续的时候。  
+- 可能导致全表扫描变慢，尤其是行比较稀疏，或者由于页分裂导致数据存储不连续的时候。  
 - 二级索引(非聚簇索引)可能比想象的要更大，因为二级索引的叶子节点包含了引用行的主键列。  
 - 二级索引需要两次索引查找。  
 
