--- a/mysql/03.查询.md
+++ b/mysql/03.查询.md
@@ -115,13 +115,46 @@ SHOW STATUS LIKE 'Last_query_cost'
 MySQL 对查询的静态优化只需要做一次，但对查询的动态优化则在每次执行时都需要重新评估。有时甚至在查询的出行过程中也会重新优化。
 
 下面是 MySQL 能够处理的优化类型：
+
 ① 重新定义关联表的顺序
+
 ② 将外连接转化成内连接
+
 ③ 使用等价变换规则
+比如移除一些恒成立或恒不成立的判断。
+
 ④ 优化 COUNT(), MIN()和 MAX()
+要找某一列的最小值，只需要查询对应B-Tree索引的最左端记录，MySQL可以直接获取索引的第一行记录。在 B-Tree 索引中，优化器会将这个表示式作为一个常数对待。如果 MySQL 使用了这种类型的优化，那么在 EXPLAIN 中就可以看到 "Select tables optimized away"。
+
 ⑤ 预估并转化为常数表达式
+比如 type 为 const 的查询。
+
 ⑥ 覆盖索引扫描
+
 ⑦ 子查询优化
+MySQL 在某些情况下可以将子查询转换成一种效率更高的形式，从而减少多个查询多次对数据的访问。
+
 ⑧ 提前终止查询
+举例:
+```
+EXPLAIN SELECT film.film_id
+FROM sakila.film
+  LEFT JOIN film_actor USING (film_id)
+  WHERE film_actor.film_id IS NULL;
+```
+这个查询将会过滤掉所有有演员的电影。每一部电影可能有很多演员，但是上面的查询一胆找到任何一个，就会停止并立刻判断下一部电影，因为只要有一名演员，那么 WHERE 条件则会过滤这类电影。
+
 ⑨ 等值传播
+如果两个列这值通过等式关联，那么 MySQL 能够把其中一个列的 WHERE 条件传递到另一个列上。例如：
+```
+SELECT film.film_id
+FROM sakila.film
+    INNER JOIN sakila.film_actor USING (film_id)
+WHERE film.film_id > 500;
+```
+因为这里使用了 film_id 字段进行等值关联，MySQL 知道这里的 WHERE 子句不仅使用于 film 表，而且对于 film_actor 表同样适用。
+
 ⑩ 列表 IN() 的比较
+在很多数据库系统中，IN() 完全等同于多个 OR 条件的子句，但在 MySQL 中这点是不成立的，MySQL 将 IN() 列表中的数据先进行排序，然后通过二分查找的方式来确定列表中的值是否满足条件，这是一个 O(log n) 复杂度的操作，
+等价地转换成 OR 查询的复杂度为 O(n)，对于 IN() 列表中有大量取值的时候，MySQL 的处理速度将会更快。
+
