--- a/mysql/04.EXPLAIN.md
+++ b/mysql/04.EXPLAIN.md
@@ -148,7 +148,7 @@ key_len 列显示了在索引字段中可能的最大长度，而不是表中数
 表示 MySQL 将使用覆盖索引，以避免访问表。
 
 "Using where"
-这意味着 MySQL 服务器将在存储引擎检索行后再进行过滤。许多 WHERE 条件里设计索引的列，当（并且如果）它读取索引时，就能被存储引擎检验，因此不是所有带 WHERE 子句的查询都会显示 "Using where"。
+这意味着 MySQL 服务器将在存储引擎检索行后再进行过滤。许多 WHERE 条件里涉及索引的列，当（并且如果）它读取索引时，就能被存储引擎检验，因此不是所有带 WHERE 子句的查询都会显示 "Using where"。
 
 "Using temporary"
 这意味着 MySQL 在对查询结果排序时会使用一个临时表。
