--- a/rust/01.入门.md
+++ b/rust/01.入门.md
@@ -1,26 +1,7 @@
-禁止连续比较，必须加括号
+## 01 入门
 
-禁止连续赋值，不支持++、--
-
-表达式不需要加';'，加';'后就变成了语句
-
-if x>0 {1} else {0};
-
-loop 死循环，通过 continue、break控制并跳出循环
-let v = loop {};
-
-loop {} 与 while true {} 的区别，后者编译时错误
-```
-fn main() {
-    let x;
-    while true {
-        x = 5;
-         break;
-    }
-    println!("{}", x); // err: use of possibly-uninitialized `x`
-}
-```
-
-for in 循环, for i in array {println!(i);}
-
-
+### 变量与常量的区别
+不允许对常量使用 mut
+常量使用 const 关键字，并且需要注明类型。
+常量只能被设置为常量表达式，不能是函数调用的结果，或者是任何其它只能在运行时计算出的值。
+在声明它的作用域中，常量在整个程序生命周期都有效。
