--- a/rust/01.入门.md
+++ b/rust/01.入门.md
@@ -1,7 +1,7 @@
 ## 01 入门
 
 ### 变量与常量的区别
-不允许对常量使用 mut
-常量使用 const 关键字，并且需要注明类型。
-常量只能被设置为常量表达式，不能是函数调用的结果，或者是任何其它只能在运行时计算出的值。
-在声明它的作用域中，常量在整个程序生命周期都有效。
+1. 不允许对常量使用 mut。  
+2. 常量使用 const 关键字，并且需要注明类型。
+3. 常量只能被设置为常量表达式，不能是函数调用的结果，或者是任何其它只能在运行时计算出的值。
+4. 在声明它的作用域中，常量在整个程序生命周期都有效。
