--- a/mysql/04.EXPLAIN.md
+++ b/mysql/04.EXPLAIN.md
@@ -29,7 +29,7 @@ UNION RESULT
 #### 派生表与联合
 当 FROM 子句中有子查询或有UNION时，table列会变得复杂很多。在这些场景下，确实没有一个“表”可以参考到，因为MySQL创建的匿名表仅在查询执行过程中存在。
 
-当在 FROM 子句中有子查询时，table 列是 <derivedN> 的形式，其中 N 是子查询的 id。这总是“向前引用” —— 换言之，N 指向 EXPLAIN 输出中后面的一行。
+当在 FROM 子句中有子查询时，table 列是 `<derivedN>` 的形式，其中 N 是子查询的 id。这总是“向前引用” —— 换言之，N 指向 EXPLAIN 输出中后面的一行。
 
 示例：
 ```
