--- a/rust/08.集合.md
+++ b/rust/08.集合.md
@@ -2,7 +2,7 @@
 
 ### Vector
 
-我们要讲到的第一个类型是 Vec<T>，也被称为 vector。vector 允许我们在一个单独的数据结构中储存多于一个的值，它在内存中彼此相邻地排列所有的值。vector 只能储存相同类型的值。
+我们要讲到的第一个类型是 `Vec<T>`，也被称为 vector。vector 允许我们在一个单独的数据结构中储存多于一个的值，它在内存中彼此相邻地排列所有的值。vector 只能储存相同类型的值。
 
 新建
 ```
