--- a/rust/专题1——引用与借用.md
+++ b/rust/专题1——引用与借用.md
@@ -3,6 +3,8 @@
 ### 引用
 & 符号就是 引用，它们允许你使用值但不获取其所有权。我们将获取引用作为函数参数称为 借用（borrowing）。正如变量默认是不可变的，引用也一样。（默认）不允许修改引用的值。
 
+注：变量与指针都是不可变的，或者说是只读的，不会产生副作用。
+
 ### 可变引用
 
 ```
@@ -17,10 +19,9 @@ fn change(some_string: &mut String) {
 }
 ```
 
-**可变引用的限制**
+① 在特定作用域中的特定数据只能有一个可变引用。
 
-可变引用有一个很大的限制：在特定作用域中的特定数据只能有一个可变引用。比如下面的代码会失败：
-
+比如下面的代码会报错：
 ```
 let mut s = String::from("hello");
 
@@ -50,8 +51,9 @@ let mut s = String::from("hello");
 let r2 = &mut s;
 ```
 
-我们也不能在拥有不可变引用的同时拥有可变引用。不可变引用的用户可不希望在他们的眼皮底下值就被意外的改变了！然而，多个不可变引用是可以的，因为没有哪个只能读取数据的人有能力影响其他人读取到的数据。比如：
+② 我们也不能在拥有不可变引用的同时拥有可变引用。
 
+不可变引用的用户可不希望在他们的眼皮底下值就被意外的改变了！然而，多个不可变引用是可以的，因为没有哪个只能读取数据的人有能力影响其他人读取到的数据。比如：
 ```
 let mut s = String::from("hello");
 
@@ -59,7 +61,21 @@ let r1 = &s; // 没问题
 let r2 = &s; // 没问题
 let r3 = &mut s; // 大问题
 
-println!("{}, {}, and {}", r1, r2, r3);
+println!("{}", r1);
+```
+报错：
+```
+error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
+  --> src/main.rs:29:14
+   |
+27 |     let r1 = &s; // 没问题
+   |              -- immutable borrow occurs here
+28 |     let r2 = &s; // 没问题
+29 |     let r3 = &mut s; // 大问题
+   |              ^^^^^^ mutable borrow occurs here
+30 | 
+31 |     println!("{}", r1);
+   |                    -- immutable borrow later used here
 ```
 
 注意一个引用的作用域从声明的地方开始一直持续到最后一次使用为止。例如，因为最后一次使用不可变引用在声明可变引用之前，所以如下代码是可以编译的：
@@ -75,6 +91,27 @@ println!("{} and {}", r1, r2);
 let r3 = &mut s; // 没问题
 println!("{}", r3);
 ```
+
+③ 不能在拥有可变引用的同时，拥有不可变引用
+```
+let mut s1: String = String::from("hello");
+let s2: &mut String = &mut s1;
+println!("{}", s1);
+println!("{}", s2);
+```
+报错：
+```
+error[E0502]: cannot borrow `s1` as immutable because it is also borrowed as mutable
+  --> src/main.rs:22:20
+   |
+21 |     let s2: &mut String = &mut s1;
+   |                           ------- mutable borrow occurs here
+22 |     println!("{}", s1);
+   |                    ^^ immutable borrow occurs here
+23 |     println!("{}", s2);
+   |                    -- mutable borrow later used here
+```
+
 
 ### 悬垂引用
 在具有指针的语言中，很容易通过释放内存时保留指向它的指针而错误地生成一个 悬垂指针（dangling pointer），所谓悬垂指针是其指向的内存可能已经被分配给其它持有者。相比之下，在 Rust 中编译器确保引用永远也不会变成悬垂状态：当你拥有一些数据的引用，编译器确保数据不会在其引用之前离开作用域。
