--- a/rust/10.Trait.md
+++ b/rust/10.Trait.md
@@ -1,2 +1,62 @@
 ## Trait
 
+### 默认实现
+
+```
+pub trait Summary {
+    fn summarize(&self) -> String {
+        String::from("(Read more...)")
+    }
+}
+```
+
+### trait 的使用
+
+#### 作为参数
+```
+pub fn notify(item: impl Summary) {
+    println!("Breaking news! {}", item.summarize());
+}
+```
+
+#### 作为返回值
+```
+fn returns_summarizable() -> impl Summary {
+    Tweet {
+        username: String::from("horse_ebooks"),
+        content: String::from("of course, as you probably already know, people"),
+        reply: false,
+        retweet: false,
+    }
+}
+```
+
+### trait bounds
+
+普通写法
+```
+pub fn notify(item1: impl Summary, item2: impl Summary) {
+```
+
+使用 `trait bounds` ，进一步表示不仅需要实现 Summary trait，并且须是同一种类型
+```
+pub fn notify<T: Summary>(item1: T, item2: T) {
+```
+
+还可用于声明同时实现多个 trait
+```
+pub fn notify(item: impl Summary + Display) {
+```
+
+简化写法
+```
+fn some_function<T: Display + Clone, U: Clone + Debug>(t: T, u: U) -> i32 {
+```
+可简化为
+```
+fn some_function<T, U>(t: T, u: U) -> i32
+    where T: Display + Clone,
+          U: Clone + Debug
+{
+```
+
