--- a/rust/专题5——包与模块.md
+++ b/rust/专题5——包与模块.md
@@ -5,16 +5,19 @@
 #### 包
 提供一系列功能的一个或多个cate
 
-####　crate
+
+#### crate
 是一个二进制项或库
+
 
 #### 约定
 如果一个包同时含有 src/main.rs 和 src/lib.rs，则它有两个 crate：一个库和一个二进制项，且名字都与包相同。通过将文件放在 src/bin 目录下，一个包可以拥有多个二进制 crate：每个 src/bin 下的文件都会被编译成一个独立的二进制 crate。
 
 
-### 使用 use 将名称引入作用域
+### 使用 use 关键字
 
-对于函数，不需要引入完成的路径。对于结构体、枚举类和其它项，习惯是指定他们的完整路径。
+#### 常见策略
+对于函数，不需要引入完成的路径。对于结构体、枚举类和其它项，习惯是指定他们的完整路径
 ```
 use std::collections::HashMap;
 
@@ -24,7 +27,8 @@ fn main() {
 }
 ```
 
-使用 as 关键词提供新的名称。
+
+#### 使用 as 关键词提供新的名称
 ```
 use std::fmt::Result;
 use std::io::Result as IoResult;
@@ -38,18 +42,22 @@ fn function2() -> IoResult<()> {
 }
 ```
 
-重导出
+
+#### 重导出
 用于引入被暴露在当前作用域直接调用
+
 ```
 pub use crate::front_of_house::hosting;
 ```
 
-引入多个
+
+#### 引入多个
 ```
 use std::{cmp::Ordering, io};
 ```
 
-全局引入
+
+#### 全局引入
 ```
 use std::collections::*;
 ```
