--- a/scala/专题4——隐式.md
+++ b/scala/专题4——隐式.md
@@ -94,35 +94,30 @@ __分析__
 
 调用 sum 函数时，发现少了一个参数 m。这个参数被标记为 `implicit` ，并且其类型为 `Monoid[Int]`。接下来它开始在当前作用域寻找类型为 `Monoid[Int]`的隐式定义或具有隐式标记的成员。发现隐式常量 `intMonoid` 满足条件，将其作为参数传入 sum 函数中。
 
-__view 限定__（已过时）
-
-当在参数中使用 implicit 类型时，编译器不仅仅在需要时补充隐含参数，而且编译器也会把这个隐含参数作为一个当前作用域内可以使用的隐含变量使用。    
-因此，在使用隐含参数的函数体内，可以省略掉 implicit 的调用而由编译器自动补上。如果不显示调用该参数，我们还可以使用 <% 标记替代隐式参数。
-
-上下文边界和 implicitly[]
-
-```
-def sorted[B >: A](implicit ord: Ordering[B]): Repr = ...
-
-def reverseSort[T : Ordering](seq: Seq[T]) = seq.sorted.reverse
-```
-
-```
-def sum[T : Integral](list: List[T]): T = {
-    val integral = implicitly[Integral[T]]
-    import integral._   // get the implicits in question into scope
-    list.foldLeft(integral.zero)(_ + _)
-}
-```
-
-```
-def secretary[A](implicit t: List[A]): Unit = {
-  println(t)
-}
-
-def boss[T:List](): Unit = {
-  secretary[T]
-}
-```
 
 隐式参数本质是一个参数，只不过它不需要主动传参，编译器会自动传递相应参数。它需要满足静态类型检查要求。即对传入的隐式变量可能会有一些限制，比如同一方法签名中相同的泛型变量必须保持一致。
+
+#### 视图边界
+
+语法糖
+```
+def f[A <% B](a: A) = a.bMethod
+def f[A](a: A)(implicit ev: A => B) = a.bMethod
+
+```
+
+
+#### 上下文边界
+
+语法糖
+```
+def g[A : B](a: A) = h(a)
+def g[A](a: A)(implicit ev: B[A]) = h(a)
+```
+
+举例：
+```
+def f[A](a: A, b: A)(implicit ord: Ordering[A]) = ord.compare(a, b)
+```
+
+
