update rust code

--- a/rust/04.控制流.md
+++ b/rust/04.控制流.md
@@ -4,7 +4,7 @@
 
 因为 if 是一个表达式，我们可以在 let 语句的右侧使用它：
 
-```
+```rust
 fn main() {
     let condition = true;
     let number = if condition {
@@ -23,7 +23,8 @@ if 的每个分支的可能的返回值都必须是相同类型。
 ## 循环语句
 
 loop 循环
-```
+
+```rust
 fn main() {
     loop {
         println!("again!");
@@ -32,7 +33,8 @@ fn main() {
 ```
 
 可以使用 break 关键字停止循环并返回其值
-```
+
+```rust
 fn main() {
     let mut counter = 0;
 
@@ -49,7 +51,8 @@ fn main() {
 ```
 
 while 循环
-```
+
+```rust
 fn main() {
     let mut number = 3;
 
@@ -64,7 +67,8 @@ fn main() {
 ```
 
 for 循环
-```
+
+```rust
 fn main() {
     let a = [10, 20, 30, 40, 50];
 
