--- a/rust/05.所有权.md
+++ b/rust/05.所有权.md
@@ -28,7 +28,8 @@ Rust 中的每一个值都有一个被称为其 所有者（owner）的变量。
 第二部分的实现。在有垃圾回收（garbage collector，GC）的语言中， GC 记录并清除不再使用的内存，而我们并不需要关心它。没有 GC 的话，识别出不再使用的内存并调用代码显式释放就是我们的责任了。
 
 Rust 采用的策略是：内存在拥有它的变量离开作用域后就被自动释放。比如：
-```
+
+```rust
 
 {
     let s = String::from("hello"); // 从此处起，s 是有效的
@@ -37,6 +38,7 @@ Rust 采用的策略是：内存在拥有它的变量离开作用域后就被自
 }                                  // 此作用域已结束，
                                    // s 不再有效
 ```
+
 这是一个将 String 需要的内存返回给操作系统的很自然的位置：当 s 离开作用域的时候。当变量离开作用域，Rust 为我们调用一个特殊的函数。这个函数叫做 drop，在这里 String 的作者可以放置释放内存的代码。Rust 在结尾的 } 处自动调用 drop。  
 
 
@@ -44,14 +46,14 @@ Rust 采用的策略是：内存在拥有它的变量离开作用域后就被自
 
 变量与数据交互的方式（一）：移动
 
-```
+```rust
 let s1 = String::from("hello");
 let s2 = s1;
 ```
 
 变量与数据交互的方式（二）：克隆
 
-```
+```rust
 let x = 5;
 let y = x;
 
@@ -78,7 +80,7 @@ Rust 有一个叫做 Copy trait 的特殊注解，可以用在类似整型这样
 ### 返回值与作用域
 变量的所有权总是遵循相同的模式：将值赋给另一个变量时移动它。当持有堆中数据值的变量离开作用域时，其值将通过 drop 被清理掉，除非数据被移动为另一个变量所有。
 
-```
+```rust
 fn main() {
     let s1 = gives_ownership();         // gives_ownership 将返回值
                                         // 移给 s1
