--- a/rust/06.结构体.md
+++ b/rust/06.结构体.md
@@ -1,20 +1,22 @@
 ## 结构体
 
 ### 定义结构体
-```
+
+```rust
 #![allow(unused)]
 fn main() {
-struct User {
-    username: String,
-    email: String,
-    sign_in_count: u64,
-    active: bool,
-}
+    struct User {
+        username: String,
+        email: String,
+        sign_in_count: u64,
+        active: bool,
+    }
 }
 ```
 
 ### 创建结构体的实例
-```
+
+```rust
 let user1 = User {
     email: String::from("someone@example.com"),
     username: String::from("someusername123"),
@@ -24,7 +26,8 @@ let user1 = User {
 ```
 
 ### 没有命名字段的结构体
-```
+
+```rust
 struct Color(i32, i32, i32);
 struct Point(i32, i32, i32);
 
@@ -33,10 +36,12 @@ let origin = Point(0, 0, 0);
 ```
 
 ### 打印
+
 println! 宏能处理很多类型的格式，不过，{} 默认告诉 println! 使用被称为 Display 的格式：意在提供给直接终端用户查看的输出。目前为止见过的基本类型都默认实现了 Display，因为它就是向用户展示 1 或其他任何基本类型的唯一方式。不过对于结构体，println! 应该用来输出的格式是不明确的，因为这有更多显示的可能性：是否需要逗号？需要打印出大括号吗？所有字段都应该显示吗？由于这种不确定性，Rust 不会尝试猜测我们的意图，所以结构体并没有提供一个 Display 实现。
 
 可以实现 Debug trait
-```
+
+```rust
 #[derive(Debug)]
 struct Rectangle {
     width: u32,
@@ -52,7 +57,7 @@ fn main() {
 
 ### 方法
 
-```
+```rust
 #[derive(Debug)]
 struct Rectangle {
     width: u32,
@@ -75,7 +80,7 @@ Rust 有一个叫 自动引用和解引用（automatic referencing and dereferen
 
 他是这样工作的：当使用 object.something() 调用方法时，Rust 会自动为 object 添加 &、&mut 或 * 以便使 object 与方法签名匹配。也就是说，这些代码是等价的：
 
-```
+```rust
 p1.distance(&p2);
 (&p1).distance(&p2);
 ```
@@ -85,8 +90,7 @@ p1.distance(&p2);
 
 impl 块的另一个有用的功能是：允许在 impl 块中定义 不 以 self 作为参数的函数。这被称为 关联函数（associated functions），因为它们与结构体相关联。它们仍是函数而不是方法，因为它们并不作用于一个结构体的实例。
 
-```
-
+```rust
 impl Rectangle {
     fn area(&self) -> u32 {
         self.width * self.height
