--- a/rust/07.枚举.md
+++ b/rust/07.枚举.md
@@ -2,7 +2,7 @@
 
 ### 模式匹配
 
-```
+```rust
 fn value_in_cents(coin: Coin) -> u8 {
     match coin {
         Coin::Penny => 1,
@@ -18,7 +18,7 @@ fn value_in_cents(coin: Coin) -> u8 {
 
 ### if let 控制流
 
-```
+```rust
 let some_u8_value = Some(0u8);
 match some_u8_value {
     Some(3) => println!("three"),
@@ -28,7 +28,7 @@ match some_u8_value {
 
 由于 match 匹配必须是穷尽的，因此这里必须加上 _ => () 这样的样板代码。当只需处理其中一个匹配项时，可以简写：
 
-```
+```rust
 if let Some(3) = some_u8_value {
     println!("three");
 }
@@ -38,7 +38,7 @@ if let Some(3) = some_u8_value {
 
 还可以使用 else 表达 _ => ...
 
-```
+```rust
 let mut count = 0;
 if let Coin::Quarter(state) = coin {
     println!("State quarter from {:?}!", state);
