--- a/rust/08.集合.md
+++ b/rust/08.集合.md
@@ -5,7 +5,8 @@
 我们要讲到的第一个类型是 `Vec<T>`，也被称为 vector。vector 允许我们在一个单独的数据结构中储存多于一个的值，它在内存中彼此相邻地排列所有的值。vector 只能储存相同类型的值。
 
 新建
-```
+
+```rust
 let v: Vec<i32> = Vec::new();
 
 // 字面量写法
@@ -13,7 +14,8 @@ let v = vec![1, 2, 3];
 ```
 
 更新
-```
+
+```rust
 let mut v = Vec::new();
 
 v.push(5);
@@ -24,7 +26,8 @@ v.push(8);
 
 读取元素
 索引语法或get方法
-```
+
+```rust
 let v = vec![1, 2, 3, 4, 5];
 
 let third: &i32 = &v[2];
@@ -37,7 +40,8 @@ match v.get(2) {
 ```
 
 内存重分配引起的错误
-```
+
+```rust
 let mut v = vec![1, 2, 3, 4, 5];
 
 let first = &v[0];
@@ -50,7 +54,8 @@ println!("The first element is: {}", first);
 遍历 vector 中的元素
 
 不改变元素的值
-```
+
+```rust
 let v = vec![100, 32, 57];
 for i in &v {
     println!("{}", i);
@@ -58,16 +63,19 @@ for i in &v {
 ```
 
 改变元素的值
-```
+
+```rust
 let mut v = vec![100, 32, 57];
 for i in &mut v {
     *i += 50;
 }
 ```
+
 为了修改可变引用所指向的值，在使用 += 运算符之前必须使用解引用运算符（\*）获取 i 中的值。
 
 使用枚举来储存多种类型
-```
+
+```rust
 enum SpreadsheetCell {
     Int(i32),
     Float(f64),
@@ -85,7 +93,7 @@ let row = vec![
 
 新建
 
-```
+```rust
 use std::collections::HashMap;
 
 let mut scores = HashMap::new();
@@ -96,7 +104,7 @@ scores.insert(String::from("Yellow"), 50);
 
 从 vector zip 创建 hash
 
-```
+```rust
 use std::collections::HashMap;
 
 let teams  = vec![String::from("Blue"), String::from("Yellow")];
@@ -109,7 +117,7 @@ let scores: HashMap<_, _> = teams.iter().zip(initial_scores.iter()).collect();
 
 对于像 i32 这样的实现了 Copy trait 的类型，其值可以拷贝进哈希 map。对于像 String 这样拥有所有权的值，其值将被移动而哈希 map 会成为这些值的所有者：
 
-```
+```rust
 use std::collections::HashMap;
 
 let field_name = String::from("Favorite color");
@@ -123,7 +131,7 @@ map.insert(field_name, field_value);
 
 读取 map 中元素的值
 
-```
+```rust
 use std::collections::HashMap;
 
 let mut scores = HashMap::new();
@@ -137,7 +145,7 @@ let score = scores.get(&team_name);
 
 遍历
 
-```
+```rust
 use std::collections::HashMap;
 
 let mut scores = HashMap::new();
@@ -153,8 +161,8 @@ for (key, value) in &scores {
 更新
 
 直接覆盖
-```
 
+```rust
 use std::collections::HashMap;
 
 let mut scores = HashMap::new();
@@ -166,7 +174,8 @@ println!("{:?}", scores);
 ```
 
 没有值时插入
-```
+
+```rust
 use std::collections::HashMap;
 
 let mut scores = HashMap::new();
@@ -180,7 +189,8 @@ println!("{:?}", scores);
 
 更新值
 通过哈希 map 储存单词和计数来统计出现次数
-```
+
+```rust
 use std::collections::HashMap;
 
 let text = "hello world wonderful world";
@@ -194,6 +204,7 @@ for word in text.split_whitespace() {
 
 println!("{:?}", map);
 ```
+
 or_insert 方法事实上会返回这个键的值的一个可变引用（&mut V）。这里我们将这个可变引用储存在 count 变量中，所以为了赋值必须首先使用星号（\*）解引用 count。这个可变引用在 for 循环的结尾离开作用域，这样所有这些改变都是安全的并符合借用规则。
 
 
