--- a/rust/10.Trait.md
+++ b/rust/10.Trait.md
@@ -2,7 +2,7 @@
 
 ### 默认实现
 
-```
+```rust
 pub trait Summary {
     fn summarize(&self) -> String {
         String::from("(Read more...)")
@@ -13,14 +13,16 @@ pub trait Summary {
 ### trait 的使用
 
 #### 作为参数
-```
+
+```rust
 pub fn notify(item: impl Summary) {
     println!("Breaking news! {}", item.summarize());
 }
 ```
 
 #### 作为返回值
-```
+
+```rust
 fn returns_summarizable() -> impl Summary {
     Tweet {
         username: String::from("horse_ebooks"),
@@ -34,26 +36,32 @@ fn returns_summarizable() -> impl Summary {
 ### trait bounds
 
 普通写法
-```
+
+```rust
 pub fn notify(item1: impl Summary, item2: impl Summary) {
 ```
 
 使用 `trait bounds` ，进一步表示不仅需要实现 Summary trait，并且须是同一种类型
-```
+
+```rust
 pub fn notify<T: Summary>(item1: T, item2: T) {
 ```
 
 还可用于声明同时实现多个 trait
-```
+
+```rust
 pub fn notify(item: impl Summary + Display) {
 ```
 
 简化写法
-```
+
+```rust
 fn some_function<T: Display + Clone, U: Clone + Debug>(t: T, u: U) -> i32 {
 ```
+
 可简化为
-```
+
+```rust
 fn some_function<T, U>(t: T, u: U) -> i32
     where T: Display + Clone,
           U: Clone + Debug
