--- a/rust/12.线程.md
+++ b/rust/12.线程.md
@@ -3,7 +3,8 @@
 ### 创建线程
 
 使用  spawn 创建线程，使用 join 等待所有线程结束
-```
+
+```rust
 let handle = thread::spawn(|| {
     for i in 1..10 {
         println!("hi number {} from the spawned thread!", i);
@@ -22,7 +23,8 @@ for i in 1..5 {
 ### 线程间所有权的转移
 
 在参数列表前使用 move 关键字强制闭包获取其使用的环境值的所有权
-```
+
+```rust
 let v = vec![1, 2, 3];
 
 let handle = thread::spawn(move || {
