--- a/rust/09.泛型.md
+++ b/rust/09.泛型.md
@@ -5,7 +5,8 @@
 Rust 通过在编译时进行泛型代码的 单态化（monomorphization）来保证效率。单态化是一个通过填充编译时使用的具体类型，将通用代码转换为特定代码的过程。编译器寻找所有泛型代码被调用的位置并使用泛型代码针对具体类型生成代码。
 
 标准库中 Option的例子：
-```
+
+```rust
 let integer = Some(5);
 let float = Some(5.0);
 ```
@@ -13,7 +14,8 @@ let float = Some(5.0);
 编译器会读取传递给 Option<T> 的值并发现有两种 Option<T>：一个对应 i32 另一个对应 f64。为此，它会将泛型定义 Option<T> 展开为 Option_i32 和 Option_f64，接着将泛型定义替换为这两个具体的定义。
 
 编译器生成的单态化版本的代码看起来像这样：
-```
+
+```rust
 enum Option_i32 {
     Some(i32),
     None,
